FrontEnd/assets/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
a {
  text-decoration: none;
  color: inherit;
}
/** end reset css**/
.edition-bar {
  background-color: black;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 59px;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
  color: white;
  gap: 10px;
  font-size: 16px;
  font-family: "Work Sans";
}

.edition-bar__link {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 10px;
}

html body .hidden {
  display: none;
}

.display-flex {
  display: flex;
}

.margin-top109 {
  margin-top: 109px;
}

body {
  max-width: 1440px;
  margin: auto;
  font-family: "Work Sans";
  font-size: 14px;
  background-color: rgba(255, 254, 248, 1);
}
header {
  display: flex;
  justify-content: space-between;
  margin: 50px auto;
  width: 1140px;
}
main {
  width: 950px;
  margin: auto;
}
section {
  margin: 50px 0;
}

h1 {
  display: flex;
  flex-direction: column;
  font-family: "Syne";
  font-size: 22px;
  font-weight: 800;
  color: #b1663c;
}

h1 > span {
  font-family: "Work Sans";
  font-size: 10px;
  letter-spacing: 0.1em;
}

h2 {
  font-family: "Syne";
  font-weight: 700;
  font-size: 30px;
  color: #1d6154;
}
nav ul {
  display: flex;
  align-items: center;
  list-style-type: none;
}
nav li {
  padding: 0 10px;
  font-size: 1.2em;
}

li:hover {
  color: #b1663c;
}
#introduction {
  display: flex;
  align-items: center;
}
#introduction figure {
  flex: 1;
}
#introduction img {
  display: block;
  width: 80%;
}

#introduction article {
  flex: 1;
}
#introduction h2 {
  margin-bottom: 1em;
}

#introduction p {
  margin-bottom: 0.5em;
}
#portfolio h2 {
  text-align: center;
  margin-top: 2em;
  margin-bottom: 1em;
}
.gallery {
  margin-top: 35px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

.gallery img {
  width: 305px;
  height: 407px;
  object-fit: cover;
}

.filterbar {
  display: flex;
  justify-content: center;
  height: 37px;
  gap: 10px;
}

.filterbar__button {
  padding: 0 20px;
  font-family: "Syne";
  font-weight: 700;
  font-size: 16px;
  color: #1d6154;
  background-color: unset;
  border: #1d6154 1px solid;
  border-radius: 60px;
}

.filterbar__button:hover {
  background-color: #1d6154;
  color: white;
  cursor: pointer;
}

.filterbar__button[aria-pressed="true"] {
    background-color: #1d6154;
    color: white;
}

#contact {
  width: 50%;
  margin: auto;
  display: flex;
  flex-direction: column;
}
#contact > * {
  text-align: center;
}
#contact h2 {
  margin-bottom: 20px;
}
#contact form {
  text-align: left;
  margin-top: 30px;
  display: flex;
  flex-direction: column;
}

#contact input {
  height: 50px;
  font-size: 1.2em;
  border: none;
  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label {
  margin: 2em 0 1em 0;
}
#contact textarea {
  border: none;
  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"], input[type="button"] {
  font-family: "Syne";
  font-weight: 700;
  color: white;
  background-color: #1d6154;
  margin: 2em auto;
  width: 180px;
  text-align: center;
  border-radius: 60px;
}

footer {
  height: 60px;
  width: 100%;
  background-color: white;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

footer nav ul {
  display: flex;
  justify-content: flex-end;
  margin: 2em;
}

/* Modal */

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: white;
  padding: 60px 100px;
  border-radius: 8px;
  max-width: 630px;
  width: 80%;
  overflow: auto; /* Permet de faire défiler le contenu si la galerie est trop grande */
  align-items: center;
}

.modal__delete-photo {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.modal__add-photo {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.modal__close {
  position: absolute;
  top: 20px;
  right: 20px;
  background-color: transparent;
  border: none;
  font-size: 14px;
  cursor: pointer;
}

.modal__previous {
  position: absolute;
  top: 20px;
  left: 20px;
  background-color: transparent;
  border: none;
  font-size: 18px;
  cursor: pointer;
}

.modal__title {
  font-weight: 400;
  font-size: 26px;
  text-align: center;
  margin-bottom: 40px;
}

.modal__gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.modal__item {
  position: relative;
}

.modal__item img {
  width: 100%;
  height: 100px;
  object-fit: cover;
}

.modal__delete-button {
  display: flex;
  justify-content: center;
  align-items: center;
  top: 5px;
  right: 5px;
  position: absolute;
  background-color: black;
  color: white;
  border: none;
  cursor: pointer;
  font-size: 11px;
  width: 17px;
  height: 17px;
}

.modal__line {
  width: 100%;
  border-top: solid #b3b3b3 1px;
  margin: 20px 0;
}

.modal .modal__submit, .modal .modal__input {
  padding: 10px 20px;
  border: none;
  margin: 0;
}

.modal .modal__submit:disabled {
  background-color: #b3b3b3;
  cursor: not-allowed;
}

.modal__form {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 20px;
  align-items: center;
}

.modal__form-title-container,
.modal__form-categories-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 100%;
}

.modal__form label {
  font-family: "Work Sans";
  font-size: 14px;
  font-weight: 500;
  color: #3d3d3d;
}

.modal__form input[type="text"],
.modal__form select {
  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
  border: none;
  padding: 0 15px;
  height: 51px;
  background-color: white ;
  font-size: 14px;
  color: #444444;
}

.modal__form-error {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 14px;
    color: red;
    border: 1px solid red;
    padding: 10px;
    margin-bottom: 15px;
    border-radius: 5px;
}

.modal__form-imgpreview {
  margin-top: 20px;
}

.modal__form-preview {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: #E8F1F6;
  border-radius: 3px;
  padding: 0 20px;
  gap: 10px;
}

.modal__form-imgpreview.preview-active {
    width: auto;
    height: 100%;
    max-height: 169px;
    object-fit: cover;
    margin-top: 0;
}

.modal__form-photolabel {
  font-family: "Work Sans";
  font-size: 14px;
  font-weight: 500;
  color: #306685;
  cursor: pointer;
  padding: 13px 40px;
  background-color: #CBD6DC;
  border-radius: 50px;
}

.modal__form-photospecs {
  font-family: "Work Sans";
  font-size: 12px;
  color: #444444;
  margin-bottom: 20px;
}

/* Login Page */

.active {
  font-weight: 600;
}

.login-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  gap: 40px;
  margin-top: 130px;
}

.login-form {
  display: flex;
  flex-direction: column;
}

.login-form__label {
  font-family: "Work Sans";
  font-weight: 500;
  font-size: 14px;
  color: #3d3d3d;
}

.login-form__input {
  margin-top: 5px;
  margin-bottom: 40px;
  padding: 0 15px;
  height: 51px;
  width: 380px;
  border: none;
  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
}

.login-form .login-form__submit {
  padding: 10px 20px;
  border: none;
  margin: 0;
  align-self: center;
}

.login-form__error {
  display: flex;
  justify-content: center;
  font-size: 14px;
  color: red;
  margin-top: -20px;
  margin-bottom: 20px;
  padding: 5px;
}

.login-form__error--border {
  border: 1px solid red;
}

.login-container__forgot-pwd {
  font-family: "Work Sans";
  font-size: 14px;
  color: #3d3d3d;
  text-decoration: underline;
}

